[package]
name = "hydra-sync"
version = "1.0.0-beta.1"
edition = "2024"

[lib]
name = "hydra_sync"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
bytes = "1.11.1"
dashmap = "7.0.0-rc2"
rand = "0.10.1"
x25519-dalek = "3.0.0-rc.0"
aes-gcm = "0.11.0-rc.4"
sha3 = "0.12.0"
anyhow = "1.0.102"
# hex = "0.4.3"
