[package]
name = "hydra-sync"
version = "1.0.0-beta.6"
edition = "2024"
authors = ["ronakgh {ronakgh97@gmail.com}"]
description = "Light-weight zero-copy E2E Single Producer Multiple Consumer network cluster library."
license = "MIT"
repository = "https://github.com/ronakgh97/hydra-sync"
readme = "README.md"
categories = ["network-programming", "security", "asynchronous", "cryptography"]
keywords = ["relay", "network", "cluster", "spmc", "zero-copy"]

[lib]
name = "hydra_sync"
path = "src/lib.rs"

[[bench]]
name = "bencher"
path = "bench/bench.rs"
harness = false

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
# bus = "2.4.1"
bytes = "1.11.1"
dashmap = "7.0.0-rc2"
rand = "0.10.1"
x25519-dalek = "3.0.0-rc.0"
aes-gcm = "0.11.0-rc.4"
sha3 = "0.12.0"
chrono = "0.4.45"
anyhow = "1.0.102"
dotenv = "0.15.0"
colored = "3.1.1"
hex = "0.4.3"
